# Backend

./: .dockerignore  .env.example  .env.rel  .gitignore  .nginx  Cargo.toml  build.docker-compose.yaml  build_and_deploy.sh  debug_run.bat  debug_run.sh  docker-compose.yaml  dockerfile  rel.docker-compose.yaml  run_debug.bat  run_debug.sh
.sqlx/: query-02d55149982d80c27f300ce7c18fe75e1074ec9b9d9a9f4844e0bbebdcc838f5.json  query-053ac367cb2647427b91414e4bc196d208ab5834e52ddadca28f132c2e9d7c65.json  query-0aed0e8d22fc0c4c00ffa736f37b4aede4b0af23a7a19425fa08c74f00319b0c.json  query-1592027066d6b370d41e3f83526a6aec78e4c6100f01f16ea6ec48bb6aab27f1.json  query-1a5be73cb034cdc3e82081d589f0e8c812d71c7b40cf76598c45f539f7785801.json  query-2ee747757fa78f382211680b427063bad82476705426050883e81d04ec63d768.json  query-358b8bc5255dcf44df19e5984212ee4c70ef78e7a9eb1f7823a33775bd7f870f.json  query-35a82fef82d42f24b672530a1bb93d0d518b7a29c99076e230043d71cd1991d7.json  query-37391ce6523637bb4d8c8ae3928229081093137cd126a384ce5cadd27c638742.json  query-48144a058050f69bfe4742c3150b6a8e390bb336e8cdbc6e8793b20843c5dac1.json  query-49a261e5bc94308a101cae98154da1dde6969fbbb022e519c33fc53538bf4570.json  query-4e4280de7c22887fdee7196c51a36806d4b74016474b38dc36421a449246905d.json  query-573f6684058db69d082d7acd592cd72465552011f52ae01e7c1d1aa88e10f006.json  query-5fe189d2eaf1d695cb8048b2dd936439d4eac683674a2640e823bd564dc20f45.json  query-64f31c350afcc883f78a80bd1f788a026430e6c833789e15d5d5c7d4e6262c36.json  query-6d2765b147985a0bca329bcd21a1bb5d16f5d5c8cb8a217a3a77ebf144afed61.json  (+20 more)
src/: main.rs  (+3 more)
(+40 files in other folders)
