[package]
name = "tour_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.3.2", features = ["postgres" , "deadpool"] }
deadpool = "0.9.5"
