[package]
name = "tour_back"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"

sqlx = { version = "0.7", features = [
    "macros",
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }

reqwest = { version = "0.11.20", features = [
    "json",
    "rustls-tls",
], default-features = false }

tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37"}
actix-cors = "0.6.4"
async-trait = "0.1.73"
actix-web-httpauth = "0.8.1"
uuid = { version = "1.4.1", features = ["v4","fast-rng",] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[build]
rustc-wrapper = "/usr/bin/sccache"